@@ -1,6 +1,7 @@
 2-October-2012 Michael Babker
 + [#63] Add Blubrry and Podtrac tracking services
 ~ Update MediaElement.JS to 2.9.5
+# [#71] Language Problems when Adding Podcast From Frontend
 
 24-August-2012 Michael Babker
 ~ Update MediaElement.JS to 2.9.3
